--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.2.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "styled-component": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
